moved parallax settings to global theme settings

--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -243,6 +243,17 @@
         }
       }
     },
+    "parallax": {
+      "name": "Parallax",
+      "settings": {
+        "parallax_speed": {
+          "label": "Paralax Speed"
+        },
+        "image_scale": {
+          "label": "Image Scale"
+        }
+      }
+    },
     "social-media": {
       "name": "Social media",
       "settings": {
